# companies_house_scraper

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CURRENT_STATUS.md  DEPLOYMENT_STRATEGY.md  DEPLOY_INSTRUCTIONS.md  Procfile  README.md  SNOV_TEST_README.md  WORKFLOW_REQUIREMENTS.md  config.yaml  create_payloads.py  demo_200_credits.py  deploy_to_railway.sh  docker-compose.yml  exhaust_credits_test.py  export_companies_directors.py  export_stakeholder_data.py  export_to_csv.py  fetch_email_results.py  global-rules copy.md  import_companies.py  logging_config.yaml  main.py  officer_import.py  populate_strike_off_companies.py  pyproject.toml  pyproject.toml.backup  queue_decision_flow.d2  recovery_state.json  render.yaml  run_local_test.sh  run_snov_test.py  search_officer_emails.py  simple_email_finder.py  streaming_architecture.d2  streaming_architecture_linear.d2  streaming_service.py  test_ch_api.py  (+7 more)
.agent-os/product/: decisions.md  mission-lite.md  mission.md  roadmap.md  tech-stack.md
.agent-os/specs/2025-08-15-streaming-api-integration/: spec-lite.md  spec.md  tasks.md
.agent-os/specs/2025-08-15-streaming-api-integration/sub-specs/: company-state-manager-schema.md  database-schema.md  technical-spec.md
.agent-os/specs/2025-08-27-snov-io-integration/: spec-lite.md  spec.md  tasks.md
.agent-os/specs/2025-08-27-snov-io-integration/sub-specs/: api-spec.md  database-schema.md  technical-spec.md
deploy/: Dockerfile.grafana  render_scheduler.py
deploy/grafana/provisioning/dashboards/: dashboard.yaml  streaming-dashboard.json
deploy/grafana/provisioning/datasources/: datasources.yaml
docs/: LOCAL_DEVELOPMENT.md  RAILWAY_DEPLOYMENT.md  database_README.md  database_schema.d2  streaming_architecture_class_diagram.d2
docs/architecture/: postgresql_streaming_architecture.d2  queue_decision_flow.d2  simplified_streaming_architecture.d2  streaming_architecture.d2  streaming_architecture_diagram.md
docs/snov_integration/: WEBHOOK_WORKAROUND.md
docs/streaming/: RENDER_DEPLOYMENT.md
scripts/: check_officer_progress.py  run_snov_test.sh  test_database.py  test_enrichment_workflow.py  test_streaming_only.py
scripts/data_import/: import_companies.py  officer_import.py
scripts/database/: migrate_db.py
scripts/temp-tests/: test_ch_api.py  test_correct_api.py  test_snov_api.py
scripts/utilities/: check_domains.py  export_to_csv.py
src/: __init__.py
src/airtable/: __init__.py  client.py  companies.py  config.py  officers.py
src/database/: __init__.py  client.py  companies.py  officers.py
src/enrichment/: __init__.py  credit_aware_workflow.py  credit_aware_workflow.py.backup  credit_manager.py  credit_manager.py.backup  dependency_manager.py  dependency_manager.py.backup  domain_manager.py  domain_manager.py.backup  enrichment_coordinator.py  enrichment_coordinator.py.backup  enrichment_state_manager.py  queue_processor.py  queue_processor.py.backup  snov_client.py  snov_client.py.backup  streaming_integration.py  streaming_integration.py.backup  webhook_handler.py  webhook_handler.py.backup
src/enrichment/models/: __init__.py  api_responses.py  config.py  database.py  validators.py
src/monitoring/: metrics_server.py
src/streaming/: README.md  __init__.py  api_usage_monitor.py  autonomous_dashboard.py  ch_api_processor.py  client.py  company_state_manager.py  comprehensive_metrics_collector.py  config.py  database.py  database_triggers.py  error_alerting.py  event_logger.py  event_processor.py  health_endpoints.py  health_monitor.py  log_filtering.py  migrations.py  queue_manager.py  rate_limit_monitor.py  recovery_manager.py  recovery_status_reporter.py  retry_engine.py  safeguards.py  status_reporter.py  structured_logger.py  unattended_operation_logger.py  unified_alerting_system.py
tests/: test_strike_off_scraper.py
tests/end_to_end/: analyze_test_results.py
tests/enrichment/: __init__.py  test_credit_aware_workflow.py  test_snov_api_client.py
tests/fixtures/: email_search_payloads.json
tests/snov_integration/: scale_test_blocks.py  simple_snov_test.py  test_company_to_domain.py  test_simple_oauth.py  test_snov_250_companies.py  test_snov_oauth.py  test_webhook_handler.py
tests/streaming/: __init__.py  test_api_connectivity.py  test_api_usage_monitoring.py  test_bulk_processing_compatibility.py  test_cloud_operations_monitoring.py  test_company_state_migration.py  test_config.py  test_connection_management.py  test_critical_functionality.py  test_data_consistency.py  test_database_integration.py  test_emergency_safeguards.py  test_error_handling.py  test_error_logging_alerting.py  test_event_logging.py  test_event_processor.py  test_health_monitoring.py  test_high_volume_scenarios.py  test_hybrid_functionality.py  test_hybrid_functionality_new.py  test_load_testing.py  test_log_filtering_sampling.py  test_migration_003.py  test_monitoring_integration.py  test_monitoring_integration.py.backup  test_queue_manager.py  test_queue_only_architecture.py  test_recovery_procedures.py  test_retry_and_backoff.py  test_safeguards.py  test_scraper_integration.py  test_snov_migrations.py  test_structured_logging.py
