[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "companies-house-scraper"
version = "0.1.0"
description = "Scrapes Companies House API for companies with strike-off status."
readme = "README.md"
requires-python = ">=3.8" # Specify a reasonable minimum Python version
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Choose appropriate license or remove
    "Operating System :: OS Independent",
]
dependencies = [
    "requests==2.31.0",
    "pyyaml==6.0.1",
    "loguru==0.7.2",
    "python-dateutil==2.8.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiohttp>=3.8.0",    # For async HTTP streaming
    "tqdm>=4.0.0",       # For progress bars
]

# Add tool.setuptools table for py_modules
[tool.setuptools]
py-modules = ["strike_off_scraper"]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
]

# Optional: Define development dependencies like linters, formatters, testing tools
[project.optional-dependencies]
dev = [
    "pytest>=7.0",         # Test runner
    "pytest-cov>=4.0",     # Coverage reporting
    "pytest-mock>=3.0",    # Mocking fixture
    "requests",            # Need requests itself for testing requests mocks
    # Add linters/formatters/mypy if desired later
    # "ruff",
    # "black",
    # "mypy",
    # "uv>=0.1.17", 
]

# Optional: Project URLs
# [project.urls]
# "Homepage" = "https://github.com/your_username/your_project"
# "Bug Tracker" = "https://github.com/your_username/your_project/issues" 