[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "companies-house-scraper"
version = "0.1.0"
description = "Scrapes Companies House API for companies with strike-off status."
readme = "README.md"
requires-python = ">=3.9" # Updated for pre-commit compatibility
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Choose appropriate license or remove
    "Operating System :: OS Independent",
]
dependencies = [
    "requests==2.31.0",
    "pyyaml==6.0.1",
    "loguru==0.7.2",
    "python-dateutil==2.8.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiohttp>=3.8.0", # For async HTTP streaming
    "tqdm>=4.0.0", # For progress bars
]

# Add tool.setuptools table for py_modules
[tool.setuptools]
py-modules = ["strike_off_scraper"]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "psutil>=7.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
    # Code quality tools
    "ruff>=0.12.9",
    "mypy>=1.11.2",
    "pre-commit>=4.0.0",
]

# Optional: Define development dependencies like linters, formatters, testing tools
[project.optional-dependencies]
dev = [
    "pytest>=7.0",         # Test runner
    "pytest-cov>=4.0",     # Coverage reporting
    "pytest-mock>=3.0",    # Mocking fixture
    "requests",            # Need requests itself for testing requests mocks
    # Add linters/formatters/mypy if desired later
    # "ruff",
    # "black",
    # "mypy",
    # "uv>=0.1.17",
]

# Optional: Project URLs
# [project.urls]
# "Homepage" = "https://github.com/your_username/your_project"
# "Bug Tracker" = "https://github.com/your_username/your_project/issues"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "api: marks tests that require real API access",
    "performance: marks tests that perform load/performance testing",
]
asyncio_mode = "auto"

# MyPy configuration - strict type checking
[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_return_any = true
implicit_reexport = false
strict_equality = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "requests.*",
    "yaml.*",
    "loguru.*",
]
ignore_missing_imports = true

# Ruff configuration - replaces black, flake8, isort
[tool.ruff]
target-version = "py39"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "D",   # pydocstyle (docstrings)
    "N",   # pep8-naming
    "S",   # bandit (security)
    "T20", # flake8-print
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "S101", # Use of assert (allowed in tests)
    "D213", # Multi-line docstring summary should start at the second line
    "D203", # 1 blank line required before class docstring
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "D", "ARG"]  # Allow assert and less strict docs in tests
"**/migrations.py" = ["T20"]  # Allow print statements in migrations

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
# skip-string-normalization removed - not supported in ruff 0.12.9
line-ending = "auto"
